[project]
name = "homework-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Davlystshina Victoria",email = "vika.davlyatshina@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
mypy = "^1.18.2"
flake8 = "^7.3.0"
isort = "^7.0.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"

